[project]
name = "mcp-taiwan-legal-db"
version = "1.0.1"
description = "MCP server for querying Taiwan (ROC) judicial judgments and the national regulation database"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "LawChat", email = "opensource@lawchat.com.tw" },
]
keywords = ["mcp", "taiwan", "legal", "regulation", "judicial", "judgment"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: Chinese (Traditional)",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "beautifulsoup4>=4.12.0",
    "tenacity>=8.0.0",
    "playwright>=1.40.0",
    "lxml>=5.0.0",
    # Use OS-native trust stores (Keychain / CryptoAPI / system ca-certs)
    # instead of the certifi bundle. Required because TWCA Global Root CA
    # in Mozilla's bundle lacks the Subject Key Identifier extension,
    # which OpenSSL 3.6+ rejects. See mcp_server/config.py.
    "truststore>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
mcp-taiwan-legal-db = "mcp_server.server:mcp.run"

[project.urls]
Homepage = "https://github.com/lawchat-oss/mcp-taiwan-legal-db"
Issues = "https://github.com/lawchat-oss/mcp-taiwan-legal-db/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mcp_server*"]

[tool.setuptools.package-data]
mcp_server = ["data/*.json"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["mcp_server/tests"]
